# offline-ai-chat-app

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  rafigpt.spec
docs/: architecture.md
hooks/: hook-asyncio.py
src/localpilot/: config.py  main.py
src/localpilot/attachments/: extract.py
src/localpilot/gui/: app.py
src/localpilot/llm/: manager.py
src/localpilot/rag/: index.py  ingest.py
src/localpilot/server/: app.py  openai_compat.py
src/localpilot/tests/: test_config.py  test_generate.py  test_rag_index.py  test_safe_paths.py
src/localpilot/utils/: logging.py  paths.py  security.py
